Replace URL with URI, improve error handling, and optimize stream handling.